<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_pink_blue"
    android:scrollbars="vertical"
    tools:context=".Loginpage">


    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/login_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="24dp"
        android:contentDescription="@string/collegelogo"
        android:orientation="vertical"
        android:paddingBottom="16dp">

        <com.github.ybq.android.spinkit.SpinKitView
            android:id="@+id/progressbar"
            style="@style/SpinKitView.Large.Circle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="244dp"
            android:visibility="visible"
            app:SpinKit_Color="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/collegelogo"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/collegelogo"
            android:layout_width="174dp"
            android:layout_height="123dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/todo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo"
            tools:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/clgname1"
            style="@style/college_name"
            android:layout_marginTop="8dp"
            android:text="@string/collegename"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/collegelogo" />

        <TextView
            android:id="@+id/clgname2"
            style="@style/college_name"
            android:layout_marginTop="1dp"
            android:text="@string/collegename3"
            app:layout_constraintBottom_toTopOf="@+id/clgname3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/clgname1" />

        <TextView
            android:id="@+id/clgname3"
            style="@style/college_name"
            android:layout_marginTop="44dp"
            android:text="@string/collegename2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/clgname1" />

        <EditText
            android:id="@+id/loginid"
            style="@style/login_edit_text"
            android:layout_marginTop="28dp"
            android:autofillHints=""
            android:drawableStart="@drawable/ic_person_white"
            android:ems="10"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/clgname3" />

        <View
            android:id="@+id/view1"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="4dp"
            android:background="@color/colorwhite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginid" />

        <EditText
            android:id="@+id/password"
            style="@style/login_edit_text"
            android:layout_marginTop="17dp"
            android:autofillHints=""
            android:drawableStart="@drawable/ic_lock_white"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view1" />

        <View
            android:id="@+id/view2"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorwhite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password" />

        <Button
            android:id="@+id/btnlogin"
            style="@style/login_button"
            android:layout_marginTop="32dp"
            android:background="@drawable/btn_presto_back"
            android:onClick="btnclick"
            android:text="@string/loginbtntxt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view2" />

        <Button
            android:id="@+id/btnsignup"
            style="@style/login_button"
            android:layout_marginTop="32dp"
            android:background="@drawable/btn_blue_back"
            android:onClick="btnclick"
            android:text="@string/signupbtntxt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.516"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnlogin" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnsignup">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/domine_bold"
                android:text="@string/forgot_password"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/colorwhite"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>